--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Studio Portfolio</title>
+    <title>Tony Randazzo Portfolio</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -15,8 +15,8 @@
         <img src="Immagini\logo.png" class="logo">
         <nav>
          <ul id="menulist">
-          <li><a href="https://itch.io/dashboard" target="_blank">Projects</a></li>
-          <li><a href="#" target="_blank">Contacts</a></li>
+          <li><a href="https://itch.io/dashboard" target="_blank">Games</a></li>
+          <li><a href="#" target="_blank">Projects</a></li>
           <li><a href="#" target="_blank">Curriculum Vitae</a></li>
          </ul>
        </nav>
@@ -26,7 +26,7 @@
         <div class="col-1">
           <h2>BIG <br>STUDIO</h2>
           <h3>Indie Game Developer</h3>
-          <p>Founded by Tony Randazzo</p>
+          <p>I'm Tony Randazzo and I publish game as "Big Studio"</p>
           <a href="https://itch.io/dashboard" target="_blank"><button type="button"><span></span>View Projects </button></a>
         </div>
         <div class="col-2">
@@ -35,9 +35,9 @@
         </div>
       </div>
       <div class="social-links">
-        <a href="http://tiktok.com/@big_studio_" target="_blank"><img src="Immagini\fb.png"></a>
-        <a href="https://x.com/BigaGamesStudio?t=74mwwU7qmx_5lBdO5UB9HQ&s=09" target="_blank"><img src="Immagini\tw.png"></a>
-        <a href="https://instagram.com/_.big_studio._?igshid=eWl4dTg4c3l3MHI=" target="_blank"><img src="Immagini\ig.png"></a>
+        <a href="" target="_blank"><img src="Immagini\fb.png"></a>
+        <a href="" target="_blank"><img src="Immagini\tw.png"></a>
+        <a href="" target="_blank"><img src="Immagini\ig.png"></a>
       </div>
     </div>
     <script type="text/javascript">
