Changes to "controller"

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <img src="Immagini\logo.png" class="logo">
         <nav>
          <ul id="menulist">
-          <li><a href="https://itch.io/dashboard" target="_blank">Games</a></li>
+          <li><a href="https://itch.io/dashboard" target="_blank">Contacts</a></li>
           <li><a href="#" target="_blank">Projects</a></li>
-          <li><a href="#" target="_blank">Curriculum Vitae</a></li>
+          <li><a href="#" target="_blank">CV</a></li>
          </ul>
        </nav>
         <img src="Immagini\menu.png" class="menu-icon" onclick="togglemenu()">
