--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="Immagini\logo.png" class="logo">
         <nav>
          <ul id="menulist">
-          <li><a href="https://linktr.ee/big_wiki" target="_blank">Contacts</a></li>
+          <li><a href="https://www.linkedin.com/in/tony-randazzo-333379297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Contacts</a></li>
           <li><a href="https://itch.io/dashboard" target="_blank">Projects</a></li>
           <li><a href="https://www.linkedin.com/in/tony-randazzo-333379297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">CV</a></li>
          </ul>
