--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
          <ul id="menulist">
           <li><a href="https://www.linkedin.com/in/tony-randazzo-333379297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">Contacts</a></li>
-          <li><a href="https://itch.io/dashboard" target="_blank">Projects</a></li>
+          <li><a href="https://big-studio.itch.io/" target="_blank">Projects</a></li>
           <li><a href="https://www.linkedin.com/in/tony-randazzo-333379297?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank">CV</a></li>
          </ul>
        </nav>
@@ -27,7 +27,7 @@
           <h2>BIG <br>STUDIO</h2>
           <h3>Indie Game Developer</h3>
           <p>I'm Tony Randazzo and I publish game as "Big Studio"</p>
-          <a href="https://itch.io/dashboard" target="_blank"><button type="button"><span></span>View Projects </button></a>
+          <a href="https://big-studio.itch.io/" target="_blank"><button type="button"><span></span>View Projects </button></a>
         </div>
         <div class="col-2">
           <img src="Immagini\controller.png" class="controller">
