--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
 </head>
 <body>
-    <img src="Immagini/particle effect.gif" alt="" class = "gif">
+    <img src="" alt="" class = "gif">
     <div class="global">
         <h1>BIG STUDIO</h1>
         <h3>by Tony Randazzo</h3>
