--- a/index.html
+++ b/index.html
@@ -46,14 +46,15 @@
     </div>
     <div class="elements">
         <ul>
-            <li><h1 id="Front-End" class="animated-h1">Front-End </h1><p>About the Front-End, as far as is HTML and CSS concerned, I am mostly self-tought via Youtube, Udemy and practice. Then, I attended a Full Stack Developer Course in wich I learned Javscript and the DOM.</p>
+            <li><h1 id="Front-End" class="animated-h1">Front-End </h1><p>About the Front-End, as far as is HTML and CSS concerned, I am mostly self-tought via Youtube, Udemy and practice. Then, I attended a Full Stack Developer Course in wich I learned Javscript and the DOM. I know some libraries such as Bootstrap and Tailwind.</p>
                 <button><span></span>View Projects</button>
                 <div class="Projects">
+                  <p class="description">These are some projects that I made using HTML,CSS and Javascript. The one on the left is a highschool project, it's my first work done with HTML,CSS and Javscript, the second one is this Portfolio and the third one is a game in which the computer pick a number and you have to guess the number (if you inspect the page, you'll know the answer)</p>
                   <ul>
                     <li>
-                      <img src="https://m.media-amazon.com/images/I/61VaxmPIrGL._AC_UF1000,1000_QL80_.jpg">
-                      <img src="Immagini/controller.png" alt="">
-                      <img src="Immagini/square.jpg" alt="">
+                      <a href="https://tonyrandazzo.github.io/VietnamWar---Lavoro-CLIL-main/" target="_blank"><img src="https://m.media-amazon.com/images/I/61VaxmPIrGL._AC_UF1000,1000_QL80_.jpg"></a>
+                      <a href="https://tonyrandazzo.github.io/Portfolio-Site/" target="_blank"><img src="Immagini/controller.png" alt=""></a>
+                      <a href="https://tonyrandazzo.github.io/Guess-The-Number/" target="_blank"><img src="https://m.media-amazon.com/images/I/61BRwWBPKfL.png" alt=""></a>
                   </li>
                 </ul>
                 </div>
@@ -70,13 +71,13 @@
             <li><h1 id="Back-End" class="animated-h1">Back-End </h1><p>I learned the Back-End in a Full Stack Developer Course at Infobasic. I know how to use PHP and MySql, especially to organize a management.</p>
                 <button><span></span>View Projects</button>
                 <div class="Projects">
+                  <p class="description">This is the github of a php project on which I'm working on. It's a simple Business Management form where you put something (like a username) and it will be saved in a SQL file</p>
                   <ul>
                     <li>
-                      <img src="Immagini/square.jpg" alt="">
-                      <img src="Immagini/square.jpg" alt="">
-                      <img src="Immagini/square.jpg" alt="">
+                      <a href="https://github.com/TonyRandazzo/Business-Management-Form" target="_blank"><img src="https://cdn.pixabay.com/photo/2022/01/30/13/33/github-6980894_1280.png" alt=""></a>
                   </li>
                 </ul>
+                </div>
                 <div class="php-bar">
                     <div class="php">60%</div>
                   </div>
@@ -84,16 +85,16 @@
                     <div class="mySQL" >60%</div>
                   </div>
                   </li>
-            <li><h1 id="Game Dev" class="animated-h1">Game Dev </h1><p>I'm self-tought on this field. I practiced on Unreal Engine, Construct 2, Godot Engine and RPG Maker almost five years ago for at least two years. Right now, I mostly use Godot Engine and I have been using this Engine for like six years.</p>
+            <li><h1 id="Game Dev" class="animated-h1">Game Dev </h1><p>I'm self-tought on this field. I practiced on Unreal Engine, Construct 2, Godot Engine and RPG Maker almost five years ago for at least two years. Right now, I mostly use Godot Engine and I have been using this Engine for like six years.I publish games as Big Studio.</p>
                 <button><span></span>View Projects</button>
                 <div class="Projects">
+                  <p class="description">This is a remake of the classic Snake Game I made with Godot Engine. I'm currently working on other projects</p>
                   <ul>
                     <li>
-                      <img src="Immagini/square.jpg" alt="">
-                      <img src="Immagini/square.jpg" alt="">
-                      <img src="Immagini/square.jpg" alt="">
+                      <a href="https://big-studio.itch.io/snake-game" target="_blank"><img src="Immagini/logo2.png" alt=""></a>
                   </li>
                 </ul>
+                </div>
                 <div class="Godot-bar">
                     <div class="Godot">90%</div>
                   </div>
