--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
     <div class="elements">
         <ul>
-            <li><h1 id="Front-End" class="animated-h1">Front-End </h1><p>About the Front-End, as far as is HTML and CSS concerned, I am mostly self-tought via Youtube, Udemy and practice. Then, I attended a Full Stack Developer Course in wich I learned Javscript and the DOM. I know some libraries such as Bootstrap and Tailwind.</p>
+            <li><h1 id="Front-End" class="animated-h1">Front-End </h1><p>About the Front-End, as far as is HTML and CSS concerned, I am mostly self-taught via Youtube, Udemy and practice. Then, I attended a Full Stack Developer Course in wich I learned Javscript and the DOM. I know some libraries such as Bootstrap and Tailwind.</p>
                 <button><span></span>View Projects</button>
                 <div class="Projects">
                   <p class="description">These are some projects that I made using HTML,CSS and Javascript. The one on the left is a highschool project, it's my first work done with HTML,CSS and Javscript, the second one is this Portfolio and the third one is a game in which the computer pick a number and you have to guess the number (if you inspect the page, you'll know the answer)</p>
@@ -85,7 +85,7 @@
                     <div class="mySQL" >60%</div>
                   </div>
                   </li>
-            <li><h1 id="Game Dev" class="animated-h1">Game Dev </h1><p>I'm self-tought on this field. I practiced on Unreal Engine, Construct 2, Godot Engine and RPG Maker almost five years ago for at least two years. Right now, I mostly use Godot Engine and I have been using this Engine for like six years.I publish games as Big Studio.</p>
+            <li><h1 id="Game Dev" class="animated-h1">Game Dev </h1><p>I'm self-taught on this field. I practiced on Unreal Engine, Construct 2, Godot Engine and RPG Maker almost five years ago for at least two years. Right now, I mostly use Godot Engine and I have been using this Engine for like six years.I publish games as Big Studio.</p>
                 <button><span></span>View Projects</button>
                 <div class="Projects">
                   <p class="description">This is a remake of the classic Snake Game I made with Godot Engine. I'm currently working on other projects</p>
