--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="progress-bar GameDev">
                     <h2>
-                        <label for="GameDev"><a href="#Game Dev">GameDev</a></label>
+                        <label for="GameDev"><a href="#Game-Dev">GameDev</a></label>
                     </h2>
                     <progress id="GameDev" min="0" max="100" value="80"></progress>
           </div>
@@ -85,7 +85,7 @@
                     <div class="mySQL" >60%</div>
                   </div>
                   </li>
-            <li><h1 id="Game Dev" class="animated-h1">Game Dev </h1><p>I'm self-taught on this field. I practiced on Unreal Engine, Construct 2, Godot Engine and RPG Maker almost five years ago for at least two years. Right now, I mostly use Godot Engine and I have been using this Engine for like six years.I publish games as Big Studio.</p>
+            <li><h1 id="Game-Dev" class="animated-h1">Game Dev </h1><p>I'm self-taught on this field. I practiced on Unreal Engine, Construct 2, Godot Engine and RPG Maker almost five years ago for at least two years. Right now, I mostly use Godot Engine and I have been using this Engine for like six years.I publish games as Big Studio.</p>
                 <button><span></span>View Projects</button>
                 <div class="Projects">
                   <p class="description">This is a remake of the classic Snake Game I made with Godot Engine. I'm currently working on other projects</p>
